<resources>
    <string name="app_name">Real Estate Manager</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- List Estate RecyclerView -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_of_estate">Type of Estate</string>
    <string name="location_of_the_estate">Location of the Estate</string>
    <string name="price_of_the_estate">Price of the Estate</string>
    <string name="estate_type">Estate Type</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="surface">Surface</string>
    <string name="number_of_rooms">Number of Rooms</string>
    <string name="number_of_bathrooms">Number of bathrooms</string>
    <string name="number_of_bedrooms">Number of bedrooms</string>
    <string name="date_of_entry_of_the_estate">Date of entry of the Estate</string>
    <string name="points_of_interest">Points of interest</string>
    <string name="date_of_sale_of_the_estate">Date of sale of the Estate</string>
    <string name="number_of_photo">Number of photo</string>

    // List of type of estate
    <string-array name="estate_type">
        <item>Flat</item>
        <item>House</item>
        <item>Penthouse</item>
        <item>Loft</item>
        <item>Duplex</item>
    </string-array>

    <bool name="is_tablet">false</bool>
</resources>
