<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="@layout/activity_search_estate">


    <!-- ESTATE TYPE -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_estate_tf_type"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/estate_marginTop"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="@dimen/estate_marginTop"
        android:hint="@string/type_of_estate"
        app:helperText="*Required"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/baseline_store_black_24">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/search_estate_auto_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- PRICE Between -->
    <!-- First Price -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_estate_tf_price_1"
        style="@style/TextFieldTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/estate_marginTop"
        android:layout_marginEnd="32dp"
        android:hint="@string/price"
        app:helperText="*Required"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_estate_tf_type"
        app:startIconDrawable="@drawable/baseline_attach_money_black_24">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_estate_ed_price_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:nextFocusDown="@id/search_estate_ed_price_2"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>
    <!-- Second Price -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_estate_tf_price_2"
        style="@style/TextFieldTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/estate_marginTop"
        android:layout_marginEnd="32dp"
        android:hint="@string/price"
        app:helperText="*Required"
        app:helperTextEnabled="true"
        app:layout_constraintBottom_toBottomOf="@+id/search_estate_tf_price_1"
        app:layout_constraintTop_toTopOf="@+id/search_estate_tf_price_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/baseline_attach_money_black_24">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_estate_ed_price_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:nextFocusDown="@id/search_estate_ed_city"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- City -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextFieldTheme"
        android:id="@+id/search_estate_tf_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="@dimen/estate_marginTop"
        android:layout_marginBottom="@dimen/estate_marginTop"
        app:layout_constraintBottom_toTopOf="@id/address_card_view_tf_state"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="City">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_estate_ed_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- SURFACE -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/estate_tf_surface"
        style="@style/TextFieldTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/estate_marginTop"
        android:layout_marginEnd="32dp"
        android:hint="@string/surface"
        app:helperText="*Required"
        app:helperTextEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/estate_tf_numbers_rooms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/estate_include_address_card_view"
        app:startIconDrawable="@drawable/baseline_settings_overscan_black_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/estate_ed_surface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- NUMBER OF ROOMS -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/estate_tf_numbers_rooms"
        style="@style/TextFieldTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/estate_marginTop"
        android:layout_marginEnd="32dp"
        android:hint="@string/number_of_rooms"
        app:helperText="*Required"
        app:helperTextEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/estate_tf_numbers_bathrooms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/estate_tf_surface"
        app:startIconDrawable="@drawable/baseline_home_black_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/estate_ed_numbers_rooms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- NUMBER OF BATHROOMS -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/estate_tf_numbers_bathrooms"
        style="@style/TextFieldTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/estate_marginTop"
        android:layout_marginEnd="32dp"
        android:hint="@string/number_of_bathrooms"
        app:helperText="*Required"
        app:helperTextEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/estate_tf_numbers_bedrooms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/estate_tf_numbers_rooms"
        app:startIconDrawable="@drawable/baseline_hot_tub_black_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/estate_ed_numbers_bathrooms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- NUMBER OF BEDROOMS -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/estate_tf_numbers_bedrooms"
        style="@style/TextFieldTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/estate_marginTop"
        android:layout_marginEnd="32dp"
        android:hint="@string/number_of_bedrooms"
        app:helperText="*Required"
        app:helperTextEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/estate_tf_date_entry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/estate_tf_numbers_bathrooms"
        app:startIconDrawable="@drawable/baseline_hotel_black_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/estate_ed_numbers_bedrooms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- DATE OF ENTRY OF THE ESTATE -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/estate_tf_date_entry"
        style="@style/TextFieldTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/estate_marginTop"
        android:layout_marginEnd="32dp"
        android:hint="@string/date_of_entry_of_the_estate"
        app:helperText="*Required"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/estate_tf_numbers_bedrooms"
        app:startIconDrawable="@drawable/baseline_date_range_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/estate_ed_date_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <include layout="@layout/point_of_interest" />
</merge>