<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.MaterialComponents.CardView"
    android:id="@+id/fragment_list_estate_mcv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxHeight="100dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_list_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fragment_list_guideline_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <!-- FIRST COLUMN -->
        <FrameLayout
            android:id="@+id/fragment_photo_list_cl"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!-- Image of the Restaurant -->
            <ImageView
                android:id="@+id/fragment_list_estate_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <!-- Image Sale -->
            <ImageView
                android:id="@+id/fragment_list_estate_sale"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/sale_48"
                android:visibility="invisible"/>
        </FrameLayout>

        <!-- First line -->
        <!-- Estate type -->
        <TextView
            android:id="@+id/fragment_list_estate_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/fragment_list_estate_location"
            app:layout_constraintStart_toStartOf="@id/fragment_list_guideline_30"
            android:hint="@string/type_of_estate"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <!-- Second line -->
        <!-- estate location -->
        <TextView
            android:id="@+id/fragment_list_estate_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/fragment_list_estate_type"
            app:layout_constraintBottom_toTopOf="@+id/fragment_list_estate_prize"
            app:layout_constraintStart_toStartOf="@id/fragment_list_guideline_30"
            android:hint="@string/location_of_the_estate"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="20sp"
            />

        <!-- Third line -->
        <!-- estate prize -->
        <TextView
            android:id="@+id/fragment_list_estate_prize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/fragment_list_estate_location"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/fragment_list_guideline_30"
            android:hint="@string/price_of_the_estate"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="25sp"
            android:textColor="@color/colorAccent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
