<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true">

    <!-- Toolbar Importation -->
    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/activity_create_estate_CL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".Controllers.Activities.CreateEstateActivity">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/activity_create_estate_gd_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.25" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/activity_create_estate_gd_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.4" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/activity_create_estate_gd_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.45" />

            <!-- ESTATE TYPE -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextFieldTheme"
                android:id="@+id/activity_create_estate_tf_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="@dimen/activity_create_estate_marginTop"
                android:layout_marginBottom="@dimen/activity_create_estate_marginTop"
                android:hint="@string/type_of_estate"
                app:layout_constraintBottom_toTopOf="@+id/activity_create_estate_tf_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/baseline_store_black_24"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/baseline_arrow_drop_down_black_24"
                app:helperTextEnabled="true"
                app:helperText="*Required">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    style="@style/Widget.MaterialComponents.AutoCompleteTextView.FilledBox"
                    android:id="@+id/activity_create_estate_auto_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:maxLines="1"
                    android:imeOptions="actionSearch"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="15sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- PRICE -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextFieldTheme"
                android:id="@+id/activity_create_estate_tf_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="@dimen/activity_create_estate_marginTop"
                android:hint="@string/price"
                app:layout_constraintBottom_toTopOf="@+id/activity_create_estate_tf_type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_create_estate_tf_description"
                app:startIconDrawable="@drawable/baseline_attach_money_black_24"
                app:helperTextEnabled="true"
                app:helperText="*Required">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_create_estate_ed_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- DESCRIPTION -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextFieldTheme"
                android:id="@+id/activity_create_estate_tf_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="@dimen/activity_create_estate_marginTop"
                android:hint="@string/description"
                app:layout_constraintBottom_toTopOf="@+id/activity_create_estate_tf_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_create_estate_tf_price"
                app:startIconDrawable="@drawable/baseline_description_black_24"
                app:helperTextEnabled="true"
                app:helperText="*Required">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_create_estate_ed_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- ADDRESS -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextFieldTheme"
                android:id="@+id/activity_create_estate_tf_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="@dimen/activity_create_estate_marginTop"
                android:hint="@string/address"
                app:layout_constraintBottom_toTopOf="@+id/activity_create_estate_tf_surface"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_create_estate_tf_description"
                app:startIconDrawable="@drawable/baseline_room_black_24"
                app:helperTextEnabled="true"
                app:helperText="*Required">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_create_estate_ed_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- SURFACE -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextFieldTheme"
                android:id="@+id/activity_create_estate_tf_surface"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="@dimen/activity_create_estate_marginTop"
                android:hint="@string/surface"
                app:layout_constraintBottom_toTopOf="@+id/activity_create_estate_tf_numbers_rooms"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_create_estate_tf_address"
                app:startIconDrawable="@drawable/baseline_settings_overscan_black_24"
                app:helperTextEnabled="true"
                app:helperText="*Required">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_create_estate_ed_surface"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- NUMBER OF ROOMS -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextFieldTheme"
                android:id="@+id/activity_create_estate_tf_numbers_rooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="@dimen/activity_create_estate_marginTop"
                android:hint="@string/number_of_rooms"
                app:layout_constraintBottom_toTopOf="@+id/activity_create_estate_tf_numbers_bathrooms"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_create_estate_tf_surface"
                app:startIconDrawable="@drawable/baseline_home_black_24"
                app:helperTextEnabled="true"
                app:helperText="*Required">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_create_estate_ed_numbers_rooms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- NUMBER OF BATHROOMS -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextFieldTheme"
                android:id="@+id/activity_create_estate_tf_numbers_bathrooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="@dimen/activity_create_estate_marginTop"
                android:hint="@string/number_of_bathrooms"
                app:layout_constraintBottom_toTopOf="@+id/activity_create_estate_tf_numbers_bedrooms"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_create_estate_tf_numbers_rooms"
                app:startIconDrawable="@drawable/baseline_hot_tub_black_24"
                app:helperTextEnabled="true"
                app:helperText="*Required">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_create_estate_ed_numbers_bathrooms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>


            <!-- NUMBER OF BEDROOMS -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextFieldTheme"
                android:id="@+id/activity_create_estate_tf_numbers_bedrooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="@dimen/activity_create_estate_marginTop"
                android:hint="@string/number_of_bedrooms"
                app:layout_constraintBottom_toTopOf="@+id/activity_create_estate_tf_date_entry"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_create_estate_tf_numbers_bathrooms"
                app:startIconDrawable="@drawable/baseline_hotel_black_24"
                app:helperTextEnabled="true"
                app:helperText="*Required">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_create_estate_ed_numbers_bedrooms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- DATE OF ENTRY OF THE ESTATE -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextFieldTheme"
                android:id="@+id/activity_create_estate_tf_date_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="@dimen/activity_create_estate_marginTop"
                android:hint="@string/date_of_entry_of_the_estate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_create_estate_tf_numbers_bedrooms"
                app:startIconDrawable="@drawable/baseline_date_range_24"
                app:helperTextEnabled="true"
                app:helperText="*Required">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_create_estate_ed_date_entry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:focusable="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/activity_create_estate_bt_validate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="@dimen/activity_create_estate_marginTop"
                app:layout_constraintTop_toBottomOf="@+id/activity_create_estate_tf_date_entry"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="Validate"
                android:onClick="Validate"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>
